--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.list {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  margin-top: 100px;
+  height: 50px;
+  width: 700px;
+  border: 1px solid blue;
+  margin: auto;
   align-items: center;
+  flex-grow: 1;
+  margin-bottom: 20px;
+}
+
+.list > div {
+  width: 110px;
+  margin-left: 14px;
+}
+
+.form {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
+  width: 270px;
+  margin: auto;
+  margin-bottom: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.page {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.preview {
+  display: flex;
+}
+
+.filter {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 700px;
+  justify-content: start;
+  margin-left: -120px;
+}
+.filter div {
+  margin-left: 30px;
 }
